examples/lact_trainer/slurm/run_pt_2478299_0.err
[2026-01-20T22:23:09.488] error: execve(): ray: No such file or directory
srun: error: neu317: task 0: Exited with exit code 2
+ unset ROCR_VISIBLE_DEVICES
+ unset HIP_VISIBLE_DEVICES
+ export CUDA_VISIBLE_DEVICES=0,1,2,3
+ CUDA_VISIBLE_DEVICES=0,1,2,3
+ export HF_HOME=/n/fs/wh-vlm/cache/huggingface
+ HF_HOME=/n/fs/wh-vlm/cache/huggingface
+ max_lengths=(4096 8192 16384)
+ TTT_RL=0
+ TTT_SFT=0
+ TASK_RL=0
+ TASK_SFT=0
+ VAL_TTT_RL=1
+ VAL_TTT_SFT=1
+ dataset=hotpotqa
+ MODEL=delta_net_sftrl_ptsftrl
+ VAL_BEFORE_TRAIN=1
+ VAL_ONLY=1
+ max_seq_length=4096
+ '[' delta_net_sftrl_ptsftrl == lact ']'
+ '[' delta_net_sftrl_ptsftrl == lact_sft ']'
+ '[' delta_net_sftrl_ptsftrl == lact_sftrl ']'
+ '[' delta_net_sftrl_ptsftrl == lact_sftrl_pt ']'
+ '[' delta_net_sftrl_ptsftrl == lact_sftrl_ptsft ']'
+ '[' delta_net_sftrl_ptsftrl == lact_sftrl_ptsftrl ']'
+ '[' delta_net_sftrl_ptsftrl == delta_net ']'
+ '[' delta_net_sftrl_ptsftrl == delta_net_sft ']'
+ '[' delta_net_sftrl_ptsftrl == delta_net_sftrl ']'
+ '[' delta_net_sftrl_ptsftrl == delta_net_sftrl_pt ']'
+ '[' delta_net_sftrl_ptsftrl == delta_net_sftrl_ptsft ']'
+ '[' delta_net_sftrl_ptsftrl == delta_net_sftrl_ptsftrl ']'
+ model_name=delta_net
+ model_tag=delta_net_sftrl_ptsftrl
+ model_path=/n/fs/visualai-scr/Models/will/tttrl/delta_net_sftrl_k5_ruler_hotpotqa_4096_32_tttrl_c8n1k5_hybrid_tasksft/global_step_24/actor/huggingface
+ export TRITON_CACHE_DIR=/n/fs/xw-hh/triton/cache
+ TRITON_CACHE_DIR=/n/fs/xw-hh/triton/cache
+ train_files=/n/fs/xw-hh/tttrl_data/data/ruler/ruler_hotpotqa_delta_net_4096_1600_train.parquet
+ val_files=/n/fs/xw-hh/tttrl_data/data/ruler/ruler_hotpotqa_delta_net_4096_200_test.parquet
+ custom_reward_function_path=/n/fs/xw-hh/tttrl/verl/utils/reward_score/ruler.py
+ max_response_length=32
+ max_prompt_length=4064
+ NGPU=4
+ save_freq=24
+ test_freq=24
+ total_epochs=1
+ train_batch_size=64
+ val_batch_size=8
+ task_ppo_mini_batch_size=16
+ task_ppo_micro_batch_size_per_gpu=2
+ task_log_prob_micro_batch_size_per_gpu=2
+ n=1
+ '[' 0 == 1 ']'
+ '[' 0 == 0 ']'
+ task_sft_update=False
+ '[' 0 == 1 ']'
+ '[' 0 == 0 ']'
+ task_update=True
+ task_ppo_update=False
+ '[' 0 == 0 ']'
+ ttt_sft_update=False
+ ttt_ppo_update=False
+ '[' delta_net_sftrl_ptsftrl == lact_sftrl_ptsftrl
/var/spool/slurmd/job2478305/slurm_script: line 204: [: missing `]'
+ delta_net_sftrl_ptsftrl == delta_net_sftrl_ptsftrl ']'
/var/spool/slurmd/job2478305/slurm_script: line 204: delta_net_sftrl_ptsftrl: command not found
+ ttt_ppo_mini_batch_size=16
+ ttt_reward=hybrid
+ ttt_ppo_loss_coef=0.2
+ ttt_ppo_micro_batch_size_per_gpu=2
+ ttt_log_prob_micro_batch_size_per_gpu=2
+ ttt_k=5
+ ttt_n=1
+ ttt_temperature=1.0
+ ttt_sft_loss_coef=1.0
+ ttt_n_chunks=8
+ '[' 1 == 1 ']'
+ val_only=True
+ '[' 1 == 1 ']'
+ val_before_train=True
+ '[' 1 == 0 ']'
+ '[' 1 == 1 ']'
+ val_ttt_sft_update=True
+ '[' 1 == 1 ']'
+ val_ttt_ppo_update=True
+ '[' 0 == 1 ']'
+ '[' 0 == 1 ']'
+ task_tag=
+ '[' 0 == 1 ']'
+ '[' 0 == 1 ']'
+ ttt_tag=
+ '[' 1 == 1 ']'
+ val_ttt_tag=_valtttrl
+ project_name=lact_rl
+ experiment_name=delta_net_sftrl_ptsftrl_ruler_hotpotqa_4096_32_valtttrl
+ ckpt_dir=/n/fs/xw-hh/checkpoints/lact_rl/delta_net_sftrl_ptsftrl_ruler_hotpotqa_4096_32_valtttrl
+ logger=console
+ cd /n/fs/xw-hh/tttrl/
+ source /n/fs/wh-vlm/miniforge3/etc/profile.d/conda.sh
++ export CONDA_EXE=/n/fs/wh-vlm/miniforge3/bin/conda
++ CONDA_EXE=/n/fs/wh-vlm/miniforge3/bin/conda
++ export _CE_M=
++ _CE_M=
++ export _CE_CONDA=
++ _CE_CONDA=
++ export CONDA_PYTHON_EXE=/n/fs/wh-vlm/miniforge3/bin/python
++ CONDA_PYTHON_EXE=/n/fs/wh-vlm/miniforge3/bin/python
++ '[' -z '' ']'
++ export CONDA_SHLVL=0
++ CONDA_SHLVL=0
++ '[' -n '' ']'
++++ dirname /n/fs/wh-vlm/miniforge3/bin/conda
+++ dirname /n/fs/wh-vlm/miniforge3/bin
++ PATH=/n/fs/wh-vlm/miniforge3/condabin:/u/hh2605/bin:/auto/u/hh2605/.cursor-server/cli/servers/Stable-cf858ca030e9c9a99ea444ec6efcbcfc40bfda70/server/bin/remote-cli:/u/hh2605/.local/bin:/u/hh2605/bin:/usr/share/Modules/bin:/u/hh2605/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/puppetlabs/bin
++ export PATH
++ '[' -z '' ']'
++ PS1=
+ conda activate lact_rl
+ local cmd=activate
+ case "$cmd" in
+ __conda_activate activate lact_rl
+ '[' -n '' ']'
+ local ask_conda
++ PS1=
++ __conda_exe shell.posix activate lact_rl
++ /n/fs/wh-vlm/miniforge3/bin/conda shell.posix activate lact_rl
+ ask_conda='PS1='\''(lact_rl) '\''
export PATH='\''/n/fs/wh-vlm/miniforge3/envs/lact_rl/bin:/n/fs/wh-vlm/miniforge3/condabin:/u/hh2605/bin:/auto/u/hh2605/.cursor-server/cli/servers/Stable-cf858ca030e9c9a99ea444ec6efcbcfc40bfda70/server/bin/remote-cli:/u/hh2605/.local/bin:/u/hh2605/bin:/usr/share/Modules/bin:/u/hh2605/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/puppetlabs/bin'\''
export CONDA_PREFIX='\''/n/fs/wh-vlm/miniforge3/envs/lact_rl'\''
export CONDA_SHLVL='\''1'\''
export CONDA_DEFAULT_ENV='\''lact_rl'\''
export CONDA_PROMPT_MODIFIER='\''(lact_rl) '\''
export CONDA_EXE='\''/n/fs/wh-vlm/miniforge3/bin/conda'\''
export _CE_M='\'''\''
export _CE_CONDA='\'''\''
export CONDA_PYTHON_EXE='\''/n/fs/wh-vlm/miniforge3/bin/python'\'''
+ eval 'PS1='\''(lact_rl) '\''
export PATH='\''/n/fs/wh-vlm/miniforge3/envs/lact_rl/bin:/n/fs/wh-vlm/miniforge3/condabin:/u/hh2605/bin:/auto/u/hh2605/.cursor-server/cli/servers/Stable-cf858ca030e9c9a99ea444ec6efcbcfc40bfda70/server/bin/remote-cli:/u/hh2605/.local/bin:/u/hh2605/bin:/usr/share/Modules/bin:/u/hh2605/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/puppetlabs/bin'\''
export CONDA_PREFIX='\''/n/fs/wh-vlm/miniforge3/envs/lact_rl'\''
export CONDA_SHLVL='\''1'\''
export CONDA_DEFAULT_ENV='\''lact_rl'\''
export CONDA_PROMPT_MODIFIER='\''(lact_rl) '\''
export CONDA_EXE='\''/n/fs/wh-vlm/miniforge3/bin/conda'\''
export _CE_M='\'''\''
export _CE_CONDA='\'''\''
export CONDA_PYTHON_EXE='\''/n/fs/wh-vlm/miniforge3/bin/python'\'''
++ PS1='(lact_rl) '
++ export PATH=/n/fs/wh-vlm/miniforge3/envs/lact_rl/bin:/n/fs/wh-vlm/miniforge3/condabin:/u/hh2605/bin:/auto/u/hh2605/.cursor-server/cli/servers/Stable-cf858ca030e9c9a99ea444ec6efcbcfc40bfda70/server/bin/remote-cli:/u/hh2605/.local/bin:/u/hh2605/bin:/usr/share/Modules/bin:/u/hh2605/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/puppetlabs/bin
++ PATH=/n/fs/wh-vlm/miniforge3/envs/lact_rl/bin:/n/fs/wh-vlm/miniforge3/condabin:/u/hh2605/bin:/auto/u/hh2605/.cursor-server/cli/servers/Stable-cf858ca030e9c9a99ea444ec6efcbcfc40bfda70/server/bin/remote-cli:/u/hh2605/.local/bin:/u/hh2605/bin:/usr/share/Modules/bin:/u/hh2605/bin:/usr/local/bin:/usr/bin:/usr/local/sbin:/usr/sbin:/opt/puppetlabs/bin
++ export CONDA_PREFIX=/n/fs/wh-vlm/miniforge3/envs/lact_rl
++ CONDA_PREFIX=/n/fs/wh-vlm/miniforge3/envs/lact_rl
++ export CONDA_SHLVL=1
++ CONDA_SHLVL=1
++ export CONDA_DEFAULT_ENV=lact_rl
++ CONDA_DEFAULT_ENV=lact_rl
++ export 'CONDA_PROMPT_MODIFIER=(lact_rl) '
++ CONDA_PROMPT_MODIFIER='(lact_rl) '
++ export CONDA_EXE=/n/fs/wh-vlm/miniforge3/bin/conda
++ CONDA_EXE=/n/fs/wh-vlm/miniforge3/bin/conda
++ export _CE_M=
++ _CE_M=
++ export _CE_CONDA=
++ _CE_CONDA=
++ export CONDA_PYTHON_EXE=/n/fs/wh-vlm/miniforge3/bin/python
++ CONDA_PYTHON_EXE=/n/fs/wh-vlm/miniforge3/bin/python
+ __conda_hashr
+ '[' -n '' ']'
+ '[' -n '' ']'
+ hash -r
+ PYTHONUNBUFFERED=1
+ srun --overlap --nodes=1 --ntasks=1 -w neu317 python3 -m verl.trainer.main_ppo algorithm.adv_estimator=grpo +algorithm.task_sft_update=False +algorithm.task_ppo_update=False +algorithm.ttt_sft_update=False +algorithm.ttt_ppo_update=False +algorithm.val_ttt_ppo_update=True +algorithm.val_ttt_sft_update=True custom_reward_function.path=/n/fs/xw-hh/tttrl/verl/utils/reward_score/ruler.py data.train_files=/n/fs/xw-hh/tttrl_data/data/ruler/ruler_hotpotqa_delta_net_4096_1600_train.parquet data.val_files=/n/fs/xw-hh/tttrl_data/data/ruler/ruler_hotpotqa_delta_net_4096_200_test.parquet data.prompt_key=prompt +data.answer_key=answer +data.data_source_key=task data.custom_cls.path=/n/fs/xw-hh/tttrl/verl/utils/dataset/rl_dataset.py data.custom_cls.name=TTTRLHFDataset data.train_batch_size=64 data.val_batch_size=8 data.max_prompt_length=4064 data.max_response_length=32 actor_rollout_ref.model.path=/n/fs/visualai-scr/Models/will/tttrl/delta_net_sftrl_k5_ruler_hotpotqa_4096_32_tttrl_c8n1k5_hybrid_tasksft/global_step_24/actor/huggingface +actor_rollout_ref.actor.ttt_n_chunks=8 +actor_rollout_ref.actor.ttt_n=1 +actor_rollout_ref.actor.ttt_reward=hybrid +actor_rollout_ref.actor.ttt_sft_loss_coef=1.0 +actor_rollout_ref.actor.ttt_ppo_loss_coef=0.2 +actor_rollout_ref.actor.ttt_ppo_mini_batch_size=16 +actor_rollout_ref.actor.ttt_ppo_micro_batch_size_per_gpu=2 actor_rollout_ref.actor.ppo_mini_batch_size=16 actor_rollout_ref.actor.ppo_micro_batch_size_per_gpu=2 actor_rollout_ref.rollout.log_prob_micro_batch_size_per_gpu=2 +actor_rollout_ref.rollout.ttt_log_prob_micro_batch_size_per_gpu=2 +actor_rollout_ref.rollout.ttt_temperature=1.0 +actor_rollout_ref.rollout.ttt_response_length=5 actor_rollout_ref.rollout.name=hf actor_rollout_ref.rollout.gpu_memory_utilization=0.9 actor_rollout_ref.rollout.n=1 trainer.balance_batch=False trainer.default_local_dir=/n/fs/xw-hh/checkpoints/lact_rl/delta_net_sftrl_ptsftrl_ruler_hotpotqa_4096_32_valtttrl trainer.val_before_train=True trainer.val_only=True trainer.n_gpus_per_node=4 trainer.nnodes=1 trainer.save_freq=24 trainer.test_freq=24 trainer.project_name=lact_rl trainer.experiment_name=delta_net_sftrl_ptsftrl_ruler_hotpotqa_4096_32_valtttrl trainer.logger=console trainer.total_epochs=1
2026-01-20 22:23:31,574	INFO worker.py:1942 -- Started a local Ray instance. View the dashboard at [1m[32mhttp://127.0.0.1:8265 [39m[22m
Error executing job with overrides: ['algorithm.adv_estimator=grpo', '+algorithm.task_sft_update=False', '+algorithm.task_ppo_update=False', '+algorithm.ttt_sft_update=False', '+algorithm.ttt_ppo_update=False', '+algorithm.val_ttt_ppo_update=True', '+algorithm.val_ttt_sft_update=True', 'custom_reward_function.path=/n/fs/xw-hh/tttrl/verl/utils/reward_score/ruler.py', 'data.train_files=/n/fs/xw-hh/tttrl_data/data/ruler/ruler_hotpotqa_delta_net_4096_1600_train.parquet', 'data.val_files=/n/fs/xw-hh/tttrl_data/data/ruler/ruler_hotpotqa_delta_net_4096_200_test.parquet', 'data.prompt_key=prompt', '+data.answer_key=answer', '+data.data_source_key=task', 'data.custom_cls.path=/n/fs/xw-hh/tttrl/verl/utils/dataset/rl_dataset.py', 'data.custom_cls.name=TTTRLHFDataset', 'data.train_batch_size=64', 'data.val_batch_size=8', 'data.max_prompt_length=4064', 'data.max_response_length=32', 'actor_rollout_ref.model.path=/n/fs/visualai-scr/Models/will/tttrl/delta_net_sftrl_k5_ruler_hotpotqa_4096_32_tttrl_c8n1k5_hybrid_tasksft/global_step_24/actor/huggingface', '+actor_rollout_ref.actor.ttt_n_chunks=8', '+actor_rollout_ref.actor.ttt_n=1', '+actor_rollout_ref.actor.ttt_reward=hybrid', '+actor_rollout_ref.actor.ttt_sft_loss_coef=1.0', '+actor_rollout_ref.actor.ttt_ppo_loss_coef=0.2', '+actor_rollout_ref.actor.ttt_ppo_mini_batch_size=16', '+actor_rollout_ref.actor.ttt_ppo_micro_batch_size_per_gpu=2', 'actor_rollout_ref.actor.ppo_mini_batch_size=16', 'actor_rollout_ref.actor.ppo_micro_batch_size_per_gpu=2', 'actor_rollout_ref.rollout.log_prob_micro_batch_size_per_gpu=2', '+actor_rollout_ref.rollout.ttt_log_prob_micro_batch_size_per_gpu=2', '+actor_rollout_ref.rollout.ttt_temperature=1.0', '+actor_rollout_ref.rollout.ttt_response_length=5', 'actor_rollout_ref.rollout.name=hf', 'actor_rollout_ref.rollout.gpu_memory_utilization=0.9', 'actor_rollout_ref.rollout.n=1', 'trainer.balance_batch=False', 'trainer.default_local_dir=/n/fs/xw-hh/checkpoints/lact_rl/delta_net_sftrl_ptsftrl_ruler_hotpotqa_4096_32_valtttrl', 'trainer.val_before_train=True', 'trainer.val_only=True', 'trainer.n_gpus_per_node=4', 'trainer.nnodes=1', 'trainer.save_freq=24', 'trainer.test_freq=24', 'trainer.project_name=lact_rl', 'trainer.experiment_name=delta_net_sftrl_ptsftrl_ruler_hotpotqa_4096_32_valtttrl', 'trainer.logger=console', 'trainer.total_epochs=1']
Traceback (most recent call last):
  File "/n/fs/xw-hh/tttrl/verl/trainer/main_ppo.py", line 40, in main
    run_ppo(config)
  File "/n/fs/xw-hh/tttrl/verl/trainer/main_ppo.py", line 74, in run_ppo
    ray.get(runner.run.remote(config))
  File "/n/fs/wh-vlm/miniforge3/envs/lact_rl/lib/python3.12/site-packages/ray/_private/auto_init_hook.py", line 22, in auto_init_wrapper
    return fn(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^
  File "/n/fs/wh-vlm/miniforge3/envs/lact_rl/lib/python3.12/site-packages/ray/_private/client_mode_hook.py", line 104, in wrapper
    return func(*args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^
  File "/n/fs/wh-vlm/miniforge3/envs/lact_rl/lib/python3.12/site-packages/ray/_private/worker.py", line 2882, in get
    values, debugger_breakpoint = worker.get_objects(object_refs, timeout=timeout)
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/n/fs/wh-vlm/miniforge3/envs/lact_rl/lib/python3.12/site-packages/ray/_private/worker.py", line 968, in get_objects
    raise value.as_instanceof_cause()
ray.exceptions.RayTaskError(AssertionError): [36mray::TaskRunner.run()[39m (pid=2875624, ip=172.17.32.117, actor_id=4fc55b612794a7b1da0f8b2001000000, repr=<main_ppo.TaskRunner object at 0x7fc26900cb90>)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/n/fs/xw-hh/tttrl/verl/trainer/main_ppo.py", line 219, in run
    trainer = RayPPOTrainer(
              ^^^^^^^^^^^^^^
  File "/n/fs/xw-hh/tttrl/verl/trainer/ppo/ray_trainer.py", line 546, in __init__
    self._validate_config()
  File "/n/fs/xw-hh/tttrl/verl/trainer/ppo/ray_trainer.py", line 648, in _validate_config
    assert config.data.val_batch_size >= config.actor_rollout_ref.actor.ttt_ppo_mini_batch_size
AssertionError

Set the environment variable HYDRA_FULL_ERROR=1 for a complete stack trace.
srun: error: neu317: task 0: Exited with exit code 1
